# house_price_prediction_mlops

./: .gitignore  pyproject.toml
analyze/: data_inspection.py
analyze/notebooks/: eda.ipynb  summary.md
src/: ingest_data.py
tests/: test_ingest_data.py
