[project]
name = "house-price-prediction-mlops"
version = "0.1.0"
description = "Practicing "
authors = [
    {name = "Amrit Das",email = "amritdas1998@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{include = "house_price_prediction_mlops", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
